0.9.5.dev1
-------------------------------

- fix issue19: devpi use now memorizes --venv setting properly. Thanks Laurent.

- initial wheel support: "devpi upload --format=bdist_wheel" now uploads
  a wheel format file to the index.  "devpi install" will trigger
  pip commands with option "--use-wheels".

- fix issue15: docs will now be built via "setup.py build_sphinx" 
  using a internal build dir so that the upload succeeds if conf.py
  would otherwise specify a non-standard location.

- implement and refine "devpi push" command.  It now accepts
  two forms "user/name" for specifying an internal devpi index
  and "pypi:REPONAME" for specifying a repository which must be
  defined in a .pypirc file.
  
- remove spurious pdb.set_trace() in devpi install command when
  no pip can be found.

- show and allow to set "acl_upload" for uploading priviliges

- add longer descriptions to each sub command, shown with
  "devpi COMMAND -h".

0.9.4
-------------------------------

- fix uploading by adding setup.py's dir to sys.path:  setup.py 
  files that import modules/packages for obtaining versions etc.
  now work. Thanks jbasko.

- fix automatic devpi-server startup on python26/windows 

0.9.3
-------------------------------

- new "devpi list" command to show projects of the in-use index or all
  release files of a project with "devpi list PROJECTNAME".

- new "devpi remove" command to remove releases from the current index,
  including any contained release files

- added "argcomplete" support for tab completion on options
  (thanks to Anthon van der Neut)

0.9.2
-------------------------------

- introduce "devpi upload --from-dir" for uploading archives in bulk
  mode, thanks to Anthon van der Neut for helping with this!
  (resolved issue5)

- improve automatic server handling via "devpi use"

- for "devpi server" you now need to specify "--log" to see log lines

- make "devpi use" also show base indexes by default
